apps/site/web/static/css/_alerts.scss
@import "variables";

.alert-link,
.alert-list {
  color: $gray-dark;
  margin-bottom: $space-12;
}

.alert-link {
  background-color: $alert-color-lighter;
  border: 1px solid $gray-lightest;
  display: block;
  padding: $space-12;
}

.alert-container {
  .alert-list-header,
  .alert-list {
    display: none; // overriden when .alert-container:target is true
  }
}

.alert-list-header {
  background-color: $alert-color;
  border: 1px solid $alert-color;
  color: $gray-dark;
  padding: $space-12;
}

.alert-list-header-title {
  display: inline-block;
  font-weight: bold;
  margin-top: -.2rem;
  max-width: 12rem;

  @include media-breakpoint-up(sm) {
    max-width: 25rem;
  }
}

.alert-list {
  list-style: none;
  padding: 0;
}

.alert-list-item {
  @include clearfix();
  background-color: $alert-color-lighter;
  border-color: $alert-color;
  border-style: solid;
  border-width: $space-1 $space-2;
  padding: $space-12;

  &:first-child {
    border-top: $space-2 solid $alert-color;
  }

  &:last-child {
    border-bottom: $space-2 solid $alert-color;
  }
}

.alert-list-toggle {
  color: $brand-primary;
  float: right;
  margin-top: -.2rem;
  text-transform: uppercase;
}

.alert-item-icon {
  background-color: $alert-color;
  border-radius: 50%;
  display: block;
  float: left;
  height: 1.5rem;
  margin-right: $space-12;
  padding: .125rem;
  width: 1.5rem;
  z-index: 1;

  > .fa {
    display: block;
    height: 1.25rem;
    margin: .0625rem .125rem;
    width: 1.25rem;
  }
}

.alert-item-icon-notice {
  background-color: $alert-notice-color;

  > .fa {
    left: .1rem;
    position: relative;
    top: .05rem;
  }
}

.alert-item-content {
  display: block;
  float: left;
  line-height: 1.7;
  margin-top: -.3rem;
  width: calc(100% - 2.25rem);
}

.alert-item-body {
  &.collapsing,
  &.collapse.in {
    display: block;
  }

  &.collapse.in + .alert-body-toggle {
    display: none;
  }
}

.alert-body-toggle {
  display: block;
  padding: 0;
}

.no-js {
  .alert-item-body {
    display: block;
  }

  .alert-body-toggle {
    display: none;
  }
}

.alert-item-updated {
  display: block;
  font-size: $font-size-sm;
  margin-top: $space-12;
}

.t-alerts-container {
  margin-left: 2.25rem;
}

.alert-container:target {
  display: block;

  .alert-link {
    display: none;
  }

  .alert-list-header,
  .alert-list {
    display: block;
  }

  .alert-list-header {
    position: sticky;
    top: 0;

    &.fixedsticky-on {
      width: calc(100% - 1.15rem);
      z-index: 1;

      // could calculate these... -ps
      @include media-breakpoint-up(sm) {
        width: 558px;
      }

      @include media-breakpoint-up(md) {
        width: 658px;
      }
    }
  }
}

